# agent_course_assignment

./: README.md  pyproject.toml  run.py
gaia_multiagent/: api_interaction.py  cfg.py  engines.py  pipeline.py  utils.py
gaia_multiagent/prompts/: initial_planning.txt  page_retriever.txt  verifier.txt
gaia_multiagent/tools/: files.py  search.py  youtube.py
